[FIX] web: fix color alignment in the kanban view
Steps:
- Install Field Service
- Open the Field Service module
- Click on the configuration
- Go to the Worksheet Template
- Now go to the kanban view
- In view, Click on dropdown menu of any card, the error appears

Issue:
- In kanban view, when we are viewing in dropdown menu colors are not correctly
 centered.

Fix:
- Added in kanban color picker mb-0 & ms-3 for margin space from bottom & left.

Task-3508241

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -305,7 +305,8 @@
             }
             .dropdown-menu {
                 margin-top: -1px;
-                min-width: 11rem;
+                margin-bottom: 0px;
+                min-width: 9rem;
             }
         }
 
