--- a/addons/web/static/src/views/kanban/kanban_dashboard.scss
+++ b/addons/web/static/src/views/kanban/kanban_dashboard.scss
@@ -171,6 +171,7 @@
                 .oe_kanban_colorpicker {
                     max-width: none;
                     padding: 0;
+                    margin-left: 2px !important;
                 }
 
                 div[class*="col-"] + div[class*="col-"] {
